--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,12 @@
+onscreen_screen:
+    resource: "@OnscreenScreenBundle/Resources/config/routing.yml"
+    prefix:   /
+
+onscreen_admin:
+    resource: "@OnscreenAdminBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 # Internal routing configuration to handle ESI
 # ****** WARNING ******
 # This route should be enabled with caution as it can open a security vulnerability
