--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,17 +1,3 @@
-onscreen_screen:
-    resource: "@OnscreenScreenBundle/Resources/config/routing.yml"
-    prefix:   /
-
-onscreen_admin:
-    resource: "@OnscreenAdminBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-# Internal routing configuration to handle ESI
-# ****** WARNING ******
-# This route should be enabled with caution as it can open a security vulnerability
-# see http://symfony.com/blog/security-release-symfony-2-0-20-and-2-1-5-released for more information
-# ****** WARNING ******
-#_internal:
-#    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
-#    prefix:   /_internal
+app:
+    resource: '@AppBundle/Controller/'
+    type: annotation
