--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "autoload": {
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
-            "AdminBundle\\": "src/Onscreen/AdminBundle",
-            "ScreenBundle\\": "src/Onscreen/ScreenBundle"
+            "Onscreen\\": "src/Onscreen"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
@@ -15,7 +14,7 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=5.4",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
         "incenteev/composer-parameter-handler": "~2.0",
